--- a/stilus.css
+++ b/stilus.css
@@ -4,10 +4,11 @@
 
 main {
     border: 2px solid rgb(102, 101, 101);
-    max-width: 900px;
+    max-width: 80%;
     margin: auto;
     padding: 10px;
 }
+.main2{max-width: 100%;}
 input{
     margin: 2px;
 }
@@ -69,3 +70,107 @@ ul li:hover{
 .shop > .col-md-7{
     border-left: none;
 }
+#overlay{
+    display: none;
+    position: fixed;
+     top:0;
+     bottom:0;
+     left:0;
+     right: 0;
+     z-index: 1;
+     background-color: rgba(0,0,0, 0.5);
+     width: 80%;
+}
+#modal{
+    max-width: 800px;
+    height: 300px;
+    margin: auto;
+    background-color: white;
+    position: absolute;
+    top:0;
+    bottom:0;
+    left:0;
+    right: 0;
+}
+.galleria {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    flex-wrap: wrap;
+    gap: 10px;
+  }
+  
+  .galleria div {
+    flex-basis: 20%;
+    padding: 0;
+    margin: 0;
+    position: relative;
+  }
+  
+  .galleria div:before {
+    content: '';
+    display: block;
+    padding-top: 100%;
+  }
+  
+  .galleria img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    padding: 2px;
+  }
+  .galleria div {
+    text-align: center;
+    width: 30%;
+    display: inline-block;
+    box-sizing: border-box;
+    padding: 3px;
+    border: 3px solid gray;
+    transition: border-color 0.3s ease-in-out;
+  }
+  
+  .galleria div:hover {
+    border-color: #0d6efd;
+  }
+  .gombok {
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  .bal {
+    margin-right: auto;
+  }
+  
+  .jobb {
+    margin-left: auto;
+  }
+  .nagykep {
+    display: block;
+    margin: 0 auto;
+    max-width: 100%;
+    height: auto;
+  }
+  .gombok button {
+    background-color: #0d6efd;
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 5px;
+    cursor: pointer;
+    margin: 5px;
+  }
+  
+  .gombok button:hover {
+    background-color: darkblue;
+  }
+  .bezar{
+    background-color: red !important; 
+  }
+  .bezar:hover {
+    background-color: darkred !important; 
+  }
