--- a/stilus.css
+++ b/stilus.css
@@ -8,7 +8,10 @@ main {
     margin: auto;
     padding: 10px;
 }
-.main2{max-width: 100%;}
+.main2{max-width: 100%;
+    padding-top: 0px;
+    border-radius: 12px 12px 0px 0px;
+}
 input{
     margin: 2px;
 }
@@ -55,13 +58,12 @@ ul li:hover{
     transition: 0.5s ease;
 }
 .col-md-7, .col-md-5{
-    border: 1.5px solid black;
-    border-radius: 10px 0px 0px 10px;
     padding: 10px;
 
 
 }
 .col-md-5{
+    border-left: 3px solid #fff;
     border-radius: 0px 10px 10px 0px;
 }
 .shop > .col-md-5{
@@ -173,4 +175,12 @@ ul li:hover{
   }
   .bezar:hover {
     background-color: darkred !important; 
+  }
+
+  header{
+    background-color: black;
+    color: white;
+    border: white;
+    border-radius: 12px;
+
   }
