--- a/stilus.css
+++ b/stilus.css
@@ -47,13 +47,17 @@ ul li{
     padding: 5px;
     margin: 30px 0px 10px 0px;
     border-radius: 10px;
+    background-color: black;
 }
 li a{
     text-decoration: none;
-    color: black;
+    color: white;
+}
+li a:hover{
+    color: #6c757d;
 }
 ul li:hover{
-    border: 1.5px solid blue;
+    border: 1.5px solid #6c757d;
     transform: scale(1.1);
     transition: 0.5s ease;
 }
