--- a/stilus.css
+++ b/stilus.css
@@ -1,190 +1,224 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.header2 {
+  border-radius: 0;
+  padding: 5px;
+  text-align: center;
 }
 
 main {
-    border: 2px solid rgb(102, 101, 101);
-    max-width: 80%;
-    margin: auto;
-    padding: 10px;
+  border: 2px solid rgb(102, 101, 101);
+  max-width: 80%;
+  margin: auto;
 }
-.main2{max-width: 100%;
-    padding-top: 0px;
-    border-radius: 12px 12px 0px 0px;
+
+.main2 {
+  max-width: 100%;
+  padding: 10px;
+  padding-top: 0px;
+  border-radius: 12px 12px 0px 0px;
 }
-input{
-    margin: 2px;
+
+input {
+  margin: 2px;
 }
 
 
-footer{
-    border-top: 1px solid black;
-    text-align: center;
-    color: white;
+footer {
+  border-top: 1px solid black;
+  text-align: center;
+  color: white;
 }
 
-.deletetd{
-    cursor: pointer;
+.deletetd {
+  cursor: pointer;
 }
-.deletetd:hover{
-    color: black !important;
-    transform: scale(1.1);
-    transition: 0.5s ease;
+
+.deletetd:hover {
+  color: black !important;
+  transform: scale(1.1);
+  transition: 0.5s ease;
 }
-.edit{
-    cursor: pointer;
+
+.edit {
+  cursor: pointer;
 }
-.edit:hover{
-    color: black !important;
-    transform: scale(1.1);
-    transition: 0.5s ease;
+
+.edit:hover {
+  color: black !important;
+  transform: scale(1.1);
+  transition: 0.5s ease;
 }
-ul li{
-    list-style: none;
-    border: 1.5px solid black;
-    width: 20%;
-    text-align: center;
-    padding: 5px;
-    margin: 30px 0px 10px 0px;
-    border-radius: 10px;
-    background-color: black;
+
+ul li {
+  list-style: none;
+  border: 1.5px solid black;
+  width: 20%;
+  text-align: center;
+  padding: 5px;
+  margin: 30px 0px 10px 0px;
+  border-radius: 10px;
+  background-color: black;
 }
-li a{
-    text-decoration: none;
-    color: white;
+
+li a {
+  text-decoration: none;
+  color: white;
 }
-li a:hover{
-    color: #6c757d;
+
+li a:hover {
+  color: #f8f9fa;
 }
-ul li:hover{
-    border: 1.5px solid #6c757d;
-    transform: scale(1.1);
-    transition: 0.5s ease;
+
+ul li:hover {
+  border: 1.5px solid #6c757d;
+  transform: scale(1.1);
+  transition: 0.5s ease;
 }
-.col-md-7, .col-md-5{
-    padding: 10px;
+
+.col-md-7,
+.col-md-5 {
+  padding: 10px;
 
 
 }
-.col-md-5{
-    border-left: 3px solid #fff;
-    border-radius: 0px 10px 10px 0px;
+
+.col-md-5 {
+  border-left: 3px solid #fff;
+  border-radius: 0px 10px 10px 0px;
 }
-.shop > .col-md-5{
-    border-right: none;
+
+.shop>.col-md-5 {
+  border-right: none;
 }
-.shop > .col-md-7{
-    border-left: none;
+
+.shop>.col-md-7 {
+    border-right: 2px solid black;
 }
-#overlay{
-    display: none;
-    position: fixed;
-     top:0;
-     bottom:0;
-     left:0;
-     right: 0;
-     z-index: 1;
-     background-color: rgba(0,0,0, 0.5);
-     width: 80%;
+
+#overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 80%;
 }
-#modal{
-    max-width: 800px;
-    height: 300px;
-    margin: auto;
-    background-color: white;
-    position: absolute;
-    top:0;
-    bottom:0;
-    left:0;
-    right: 0;
+
+#modal {
+  max-width: 800px;
+  height: 300px;
+  margin: auto;
+  background-color: white;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
+
 .galleria {
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    flex-wrap: wrap;
-    gap: 10px;
-  }
-  
-  .galleria div {
-    flex-basis: 20%;
-    padding: 0;
-    margin: 0;
-    position: relative;
-  }
-  
-  .galleria div:before {
-    content: '';
-    display: block;
-    padding-top: 100%;
-  }
-  
-  .galleria img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    padding: 2px;
-  }
-  .galleria div {
-    text-align: center;
-    width: 30%;
-    display: inline-block;
-    box-sizing: border-box;
-    padding: 3px;
-    border: 3px solid gray;
-    transition: border-color 0.3s ease-in-out;
-  }
-  
-  .galleria div:hover {
-    border-color: #0d6efd;
-  }
-  .gombok {
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  .bal {
-    margin-right: auto;
-  }
-  
-  .jobb {
-    margin-left: auto;
-  }
-  .nagykep {
-    display: block;
-    margin: 0 auto;
-    max-width: 100%;
-    height: auto;
-  }
-  .gombok button {
-    background-color: #0d6efd;
-    color: white;
-    border: none;
-    padding: 10px 15px;
-    border-radius: 5px;
-    cursor: pointer;
-    margin: 5px;
-  }
-  
-  .gombok button:hover {
-    background-color: darkblue;
-  }
-  .bezar{
-    background-color: red !important; 
-  }
-  .bezar:hover {
-    background-color: darkred !important; 
-  }
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  flex-wrap: wrap;
+  gap: 10px;
+}
 
-  header{
-    background-color: black;
-    color: white;
-    border: white;
-    border-radius: 12px;
+.galleria div {
+  flex-basis: 20%;
+  padding: 0;
+  margin: 0;
+  position: relative;
+}
 
-  }
+.galleria div:before {
+  content: '';
+  display: block;
+  padding-top: 100%;
+}
+
+.galleria img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  padding: 2px;
+}
+
+.galleria div {
+  text-align: center;
+  width: 30%;
+  display: inline-block;
+  box-sizing: border-box;
+  padding: 3px;
+  border: 3px solid gray;
+  transition: border-color 0.3s ease-in-out;
+}
+
+.galleria div:hover {
+  border-color: #0d6efd;
+}
+
+.gombok {
+  display: flex;
+  justify-content: space-between;
+}
+
+.bal {
+  margin-right: auto;
+}
+
+.jobb {
+  margin-left: auto;
+}
+
+.nagykep {
+  display: block;
+  margin: 0 auto;
+  max-width: 100%;
+  height: auto;
+}
+
+.gombok button {
+  background-color: #0d6efd;
+  color: white;
+  border: none;
+  padding: 10px 15px;
+  border-radius: 5px;
+  cursor: pointer;
+  margin: 5px;
+}
+
+.gombok button:hover {
+  background-color: darkblue;
+}
+
+.bezar {
+  background-color: red !important;
+}
+
+.bezar:hover {
+  background-color: darkred !important;
+}
+
+header {
+  background-color: black;
+  color: white;
+  border: white;
+  border-radius: 12px 12px 0px 0px;
+  text-align: center;
+
+}
+.m-1{
+  padding: 10px;
+}
