--- a/stilus.css
+++ b/stilus.css
@@ -55,7 +55,7 @@ footer {
 ul li {
   list-style: none;
   border: 1.5px solid black;
-  width: 20%;
+  width: 30%;
   text-align: center;
   padding: 5px;
   margin: 30px 0px 10px 0px;
@@ -221,4 +221,29 @@ header {
 }
 .m-1{
   padding: 10px;
+}
+.kosarMobil{
+  display: none;
+}
+@media screen and (max-width:790px){
+    .kosar{
+      display: none;
+    }
+    .kosarMobil{
+      display: inline;
+      background-color: black;
+      text-align: center;
+      color: white;
+      padding: 8px;
+      margin: 10px;
+    }
+    .shop{
+      margin: 10px;
+    }
+    .shop>.col-md-7 {
+      border-right: 0;
+  }
+  ul li{
+    width: 40%;
+  }
 }
